# chembuider-rs

./: .gitignore  Cargo.toml  LICENSE  README.ja.md  README.md  chembuilder_config.json
assets/: default_config.json
assets/fragments/: Ac.json  BH2.json  BPin.json  Boc.json  Br.json  CF3.json  CO2Me.json  Cbz.json  Cl.json  D.json  Et.json  F.json  H.json  I.json  Li.json  Me.json  MgBr.json  N.json  N3.json  NH2.json  NO2.json  O.json  OH.json  OMe.json  Oxo.json  PH2.json  SH.json  SiH3.json  TBS.json  TMS.json  benzene.json
examples/: editor.rs
fragments/: Ac.json  BH2.json  BPin.json  Benz.json  Boc.json  Br.json  CF3.json  CO2Me.json  Cbz.json  Cl.json  D.json  Et.json  F.json  H.json  I.json  Li.json  Me.json  MgBr.json  N.json  N3.json  NH2.json  NO2.json  O.json  OH.json  OMe.json  Oxo.json  PH2.json  SH.json  SiH3.json  TBS.json  TMS.json  benzene.json
src/: app.rs  clipboard.rs  config.rs  lib.rs  main.rs
src/molecule/: cdx.rs  cleanup.rs  fragment.rs  image.rs  mod.rs  mol2.rs  ole.rs
src/widget/: draw.rs  fragments.rs  interact.rs  mod.rs
tests/fixtures/: chemdraw_real.cdx
