[package]
name = "chembuider-rs"
version = "0.1.0"
edition = "2024"
description = "An egui-based 2D chemical structure editor with MOL2 export"

[dependencies]
eframe = "0.29"
egui = "0.29"
rfd = "0.17.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CDX export + ChemDraw-compatible clipboard are Windows-only.
[target.'cfg(windows)'.dependencies]
clipboard-win = "5"
cdx-file-rs = { git = "https://github.com/IndigoCarmine/cdx_file_rs" }
